tech pages created

--- a/digitl.html
+++ b/digitl.html
@@ -481,21 +481,21 @@ Empowering businesses with innovative technology – that’s what we do best.
                                                   </div>
                                                   <div id="technologies-content" style="display: none">
                                                     <div class="row">
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('mern.html')">MERN Stack</a>
-                                                        <a class="nav-link" onclick="navigateToPage('mean.html')">MEAN Stack</a>
-                                                        <a class="nav-link" onclick="navigateToPage('food.html')">LAMP Stack</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('food.html')">Django</a>
-                                                        <a class="nav-link" onclick="navigateToPage('flask.html')">Flask</a>
-                                                        <a class="nav-link" onclick="navigateToPage('ruby.html')">Ruby on Rails</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('plc.html')">PLC</a>
-                                                        <a class="nav-link" onclick="navigateToPage('avr.html')">AVR/PIC</a>
-                                                        <a class="nav-link" onclick="navigateToPage('node.html')">NodeMCU</a>
-                                                      </div>
+                                                        <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('mern.html')">MERN Stack</a>
+                                                            <a class="nav-link" onclick="navigateToPage('mean.html')">MEAN Stack</a>
+                                                            <a class="nav-link" onclick="navigateToPage('lamp.html')">LAMP Stack</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('django.html')">Django</a>
+                                                            <a class="nav-link" onclick="navigateToPage('flask.html')">Flask</a>
+                                                            <a class="nav-link" onclick="navigateToPage('ruby.html')">Ruby on Rails</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('plc.html')">PLC</a>
+                                                            <a class="nav-link" onclick="navigateToPage('avr.html')">AVR/PIC</a>
+                                                            <a class="nav-link" onclick="navigateToPage('node.html')">NodeMCU</a>
+                                                          </div>
                                                     </div>
                                                 </div>
                                             </div>
