--- a/index.html
+++ b/index.html
@@ -455,10 +455,10 @@
                             <div class="col-lg-4">
                               <a class="nav-link" onclick="navigateToPage('mern.html')">MERN Stack</a>
                               <a class="nav-link" onclick="navigateToPage('mean.html')">MEAN Stack</a>
-                              <a class="nav-link" onclick="navigateToPage('food.html')">LAMP Stack</a>
+                              <a class="nav-link" onclick="navigateToPage('lamp.html')">LAMP Stack</a>
                             </div>
                             <div class="col-lg-4">
-                              <a class="nav-link" onclick="navigateToPage('food.html')">Django</a>
+                              <a class="nav-link" onclick="navigateToPage('django.html')">Django</a>
                               <a class="nav-link" onclick="navigateToPage('flask.html')">Flask</a>
                               <a class="nav-link" onclick="navigateToPage('ruby.html')">Ruby on Rails</a>
                             </div>
