--- a/website.html
+++ b/website.html
@@ -443,59 +443,59 @@ Empowering businesses with innovative technology – that’s what we do best.
                                                 </div>
                                                 <div id="industries-content" style="display: none">
                                                     <div class="row mx-4">
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('food.html')">Food Commerce</a>
-                                                        <a class="nav-link" onclick="navigateToPage('ecommerce.html')">Ecommerce</a>
-                                                        <a class="nav-link" onclick="navigateToPage('health.html')">HealthCare</a>
+                                                        <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('food.html')">Food Commerce</a>
+                                                            <a class="nav-link" onclick="navigateToPage('ecommerce.html')">Ecommerce</a>
+                                                            <a class="nav-link" onclick="navigateToPage('health.html')">HealthCare</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('tour.html')">Tour and Travels</a>
+                                                            <a class="nav-link" onclick="navigateToPage('pharma.html')">Pharmaceuticals</a>
+                                                            <a class="nav-link" onclick="navigateToPage('automobile.html')">Automobile</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('salons.html')">Salon & Parlors</a>
+                                                            <a class="nav-link" onclick="navigateToPage('real_estate.html')">Real Estate</a>
+                                                            <a class="nav-link" onclick="navigateToPage('hospitals.html')">Hospitals</a>
+                                                          </div>
+                                                        </div>
                                                       </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('tour.html')">Tour and Travels</a>
-                                                        <a class="nav-link" onclick="navigateToPage('pharma.html')">Pharmaceuticals</a>
-                                                        <a class="nav-link" onclick="navigateToPage('automobile.html')">Automobile</a>
+                                                      <div id="service-content" style="display: none">
+                                                        <div class="row">
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('mobile.html')">Mobile App Development</a>
+                                                            <a class="nav-link" onclick="navigateToPage('website.html')">Website Design</a>
+                                                            <a class="nav-link" onclick="navigateToPage('web-app.html')">Web app development</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('industrial.html')">Industrial Automation Software</a>
+                                                            <a class="nav-link" onclick="navigateToPage('panel.html')">Panel Software</a>
+                                                            <a class="nav-link" onclick="navigateToPage('scada.html')">Scada Software</a>
+                                                          </div>
+                                                          <div class="col-lg-4">
+                                                            <a class="nav-link" onclick="navigateToPage('digitl.html')">Digital Marketing</a>
+                                                            <a class="nav-link" onclick="navigateToPage('graphics.html')">Graphics Design</a>
+                                                            <a class="nav-link" onclick="navigateToPage('seo.html')">SEO/SMO</a>
+                                                          </div>
+                                                        </div>
                                                       </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('salons.html')">Salon & Parlors</a>
-                                                        <a class="nav-link" onclick="navigateToPage('real_estate.html')">Real Estate</a>
-                                                        <a class="nav-link" onclick="navigateToPage('hospitals.html')">Hospitals</a>
-                                                      </div>
-                                                    </div>
-                                                  </div>
-                                                  <div id="service-content" style="display: none">
-                                                    <div class="row">
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('mobile.html')">Mobile App Development</a>
-                                                        <a class="nav-link" onclick="navigateToPage('website.html')">Website Design</a>
-                                                        <a class="nav-link" onclick="navigateToPage('web-app.html')">Web app development</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('industrial.html')">Industrial Automation Software</a>
-                                                        <a class="nav-link" onclick="navigateToPage('panel.html')">Panel Software</a>
-                                                        <a class="nav-link" onclick="navigateToPage('scada.html')">Scada Software</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('digitl.html')">Digital Marketing</a>
-                                                        <a class="nav-link" onclick="navigateToPage('graphics.html')">Graphics Design</a>
-                                                        <a class="nav-link" onclick="navigateToPage('seo.html')">SEO/SMO</a>
-                                                      </div>
-                                                    </div>
-                                                  </div>
-                                                  <div id="technologies-content" style="display: none">
-                                                    <div class="row">
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('mern.html')">MERN Stack</a>
-                                                        <a class="nav-link" onclick="navigateToPage('mean.html')">MEAN Stack</a>
-                                                        <a class="nav-link" onclick="navigateToPage('food.html')">LAMP Stack</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('food.html')">Django</a>
-                                                        <a class="nav-link" onclick="navigateToPage('flask.html')">Flask</a>
-                                                        <a class="nav-link" onclick="navigateToPage('ruby.html')">Ruby on Rails</a>
-                                                      </div>
-                                                      <div class="col-lg-4">
-                                                        <a class="nav-link" onclick="navigateToPage('plc.html')">PLC</a>
-                                                        <a class="nav-link" onclick="navigateToPage('avr.html')">AVR/PIC</a>
-                                                        <a class="nav-link" onclick="navigateToPage('node.html')">NodeMCU</a>
-                                                      </div>
+                                                      <div id="technologies-content" style="display: none">
+                                                        <div class="row">
+                                                            <div class="col-lg-4">
+                                                                <a class="nav-link" onclick="navigateToPage('mern.html')">MERN Stack</a>
+                                                                <a class="nav-link" onclick="navigateToPage('mean.html')">MEAN Stack</a>
+                                                                <a class="nav-link" onclick="navigateToPage('lamp.html')">LAMP Stack</a>
+                                                              </div>
+                                                              <div class="col-lg-4">
+                                                                <a class="nav-link" onclick="navigateToPage('django.html')">Django</a>
+                                                                <a class="nav-link" onclick="navigateToPage('flask.html')">Flask</a>
+                                                                <a class="nav-link" onclick="navigateToPage('ruby.html')">Ruby on Rails</a>
+                                                              </div>
+                                                              <div class="col-lg-4">
+                                                                <a class="nav-link" onclick="navigateToPage('plc.html')">PLC</a>
+                                                                <a class="nav-link" onclick="navigateToPage('avr.html')">AVR/PIC</a>
+                                                                <a class="nav-link" onclick="navigateToPage('node.html')">NodeMCU</a>
+                                                              </div>
                                                     </div>
                                                 </div>
                                             </div>
