training page created

--- a/training.html
+++ b/training.html
@@ -517,121 +517,6 @@
             <!-- Sticky Header Ends -->
 
 
-            <!-- Banner Section Begins -->
-            <div class="triangle-bg">
-                <div id="about" class="banner-section container">
-                    <div class="row">
-                        <!-- Left Banner Text Begins -->
-                        <div class="col-md-5 left-banner-text animated" data-animation="fadeInLeft"
-                            data-animation-delay="500">
-                            <!-- Banner Text Slider -->
-                            <div class="text-slider">
-                                <ul class="slide-text slides">
-                                    <li class="capitalize">
-                                        <h1 class="text-uppercase">
-                                            <span class="text-extrabold">Tech</span>
-                                            Meets Innovation
-                                        </h1>
-                                    </li>
-                                    <li class="capitalize">
-                                        <h1 class="text-uppercase">
-                                            <span class="text-extrabold">Top</span> Solution
-                                            Provider
-                                        </h1>
-                                    </li>
-                                    <li class="capitalize">
-                                        <h1 class="text-uppercase">
-                                            <span class="text-extrabold"> Key</span> Tech Excellence
-                                        </h1>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- Banner Content -->
-                            <div class="row">
-                                <div class="col-md-10">
-                                    <p class="banner-text">
-                                        Welcome to
-                                        <span class="extrabold-italic">Dashandots Technology Pvt. Ltd.</span>Here, we
-                                        provide
-                                        Next-generation software development
-                                        with exceptional training. We create tailored software
-                                        solutions and help aspiring tech professionals gain the
-                                        skills they need to thrive. Our expertise enhance and
-                                        shapes the tech leaders for the future.
-                                    </p>
-                                </div>
-                            </div>
-                            <!-- Banner Button -->
-                            <div class="banner-button">
-                                <a href="#" class="btn gk-btn white-btn gk-btn-margin" role="button">Learn more</a>
-                            </div>
-                            <!-- Banner Nav Shape -->
-                            <div class="row triangle-shape banner-nav">
-                                <div class="col-sm-12">
-                                    <a href="#features" class="banner-triangle scroll color-white"><i
-                                            class="flaticon flaticon-arrow351 gk-triangle-bigsharp"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Left Banner Text Ends -->
-
-                        <!-- Right Side Content Start -->
-                        <div class="col-md-7 right-banner-image animated" data-animation="fadeInRight"
-                            data-animation-delay="500">
-                            <div class="row">
-                                <!-- Banner Counter Info Begins -->
-                                <div class="col-sm-5 banner-image-info">
-                                    <!-- Row 1 -->
-                                    <div class="row">
-                                        <div class="col-xs-12 banner-left-margin">
-                                            <div class="banner-info col-xs-6 text-right text-uppercase">
-                                                <div class="count-number" style="display:inline-flex;"
-                                                    data-count="1500">
-                                                    <span class="counter text-bold"></span>
-                                                    <span class="text-bold">+</span>
-                                                </div>
-                                                Happy Clients
-                                            </div>
-                                            <div class="banner-info-right col-xs-6 no-padding">
-                                                <span class="close-brackets">}</span>
-                                                <i class="fa fa-smile-o color-green"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Row 2 -->
-                                    <div class="row">
-                                        <div class="col-xs-12 banner-left-margin">
-                                            <div class="banner-info col-xs-6 text-right text-uppercase">
-                                                <div class="count-number" data-count="1200 ">
-                                                    <span class="counter text-bold"></span>
-                                                </div>
-                                                Completed Projects
-                                            </div>
-                                            <div class="banner-info-right col-xs-6 no-padding">
-                                                <span class="close-brackets">}</span>
-                                                <i class="fa fa-check-circle color-green"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <!-- Row 3 -->
-                                    <div class="row">
-                                        <div class="col-xs-12 banner-left-margin"></div>
-                                    </div>
-                                </div>
-                                <!-- Banner Counter Info Ends -->
-                                <!-- Banner Image -->
-                                <div class="col-sm-7">
-                                    <img class="img-responsive pull-right" src="images/hero_right.png" alt="Iphone" />
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Right Side Content End-->
-                    </div>
-                </div>
-            </div>
-            <!-- Banner Section Ends -->
-
-        </div>
         <!-- Header Ends -->
 
         <!-- Start of Training Section -->
@@ -641,8 +526,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="animate-on-scroll">Transforming Ideas into Digital Reality</h1>
-                <p class="animate-on-scroll">Dash and Dots: Crafting innovative web and mobile applications with the power of the MERN stack to drive business growth and user engagement.</p>
-                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+                <p class="animate-on-scroll">Dash and Dots: Crafting innovative web and mobile applications with the power of the MERN stack to drive business growth and user engagement. We also provide expert training in various technologies to help you stay ahead of the curve.</p>
+                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Training Programs</a>
             </div>
             <div class="hero-image animate-on-scroll">
                 <img src="/images/mobile_demo.jpeg" alt="MERN Stack App Mockup">
@@ -656,7 +541,7 @@
 <!-- Services Section -->
 <section class="services">
     <div class="container">
-        <h2 class="section-title animate-on-scroll">Our MERN Stack Specializations</h2>
+        <h2 class="section-title animate-on-scroll">Our Training Areas</h2>
         <div class="service-grid">
             <div class="service-card animate-on-scroll">
                 <div class="service-icon">
@@ -664,8 +549,8 @@
                         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                     </svg>
                 </div>
-                <h3>Full-Stack Development</h3>
-                <p>End-to-end web and mobile solutions built with MongoDB, Express.js, React, and Node.js for seamless performance.</p>
+                <h3>Mobile App Development</h3>
+                <p>Learn how to develop mobile apps using modern frameworks and tools to create powerful, user-friendly applications.</p>
             </div>
             <div class="service-card animate-on-scroll">
                 <div class="service-icon">
@@ -675,8 +560,8 @@
                         <line x1="12" y1="17" x2="12" y2="21"></line>
                     </svg>
                 </div>
-                <h3>UI/UX Design with React</h3>
-                <p>Crafting intuitive and responsive user interfaces using React for enhanced user engagement and satisfaction.</p>
+                <h3>Website Design</h3>
+                <p>Master the art of designing responsive, modern, and visually appealing websites for any type of business.</p>
             </div>
             <div class="service-card animate-on-scroll">
                 <div class="service-icon">
@@ -685,8 +570,8 @@
                         <circle cx="12" cy="7" r="4"></circle>
                     </svg>
                 </div>
-                <h3>API Development & Integration</h3>
-                <p>Building robust RESTful APIs with Node.js and Express.js for seamless backend integration and scalability.</p>
+                <h3>Web App Development</h3>
+                <p>Gain expertise in building full-stack web applications using powerful frameworks like MERN, MEAN, and others.</p>
             </div>
         </div>
     </div>
@@ -695,33 +580,33 @@
 <!-- Features Showcase -->
 <section class="features">
     <div class="container">
-        <h2 class="section-title animate-on-scroll">Innovative Features for Your MERN Stack Applications</h2>
+        <h2 class="section-title animate-on-scroll">Training Features</h2>
         <div class="features-content">
             <div class="features-list">
                 <div class="feature-item animate-on-scroll">
                     <h3>
                         <span class="feature-number">1</span>
-                        Real-Time Data Sync
+                        Industrial Automation Software
                     </h3>
-                    <p>Leverage MongoDB and Node.js for real-time data synchronization across devices.</p>
+                    <p>Learn how to develop and implement industrial automation solutions with real-time control systems.</p>
                 </div>
                 <div class="feature-item animate-on-scroll">
                     <h3>
                         <span class="feature-number">2</span>
-                        Responsive UI with React
+                        SCADA Software Development
                     </h3>
-                    <p>Build dynamic, responsive user interfaces that adapt seamlessly to any screen size.</p>
+                    <p>Get hands-on experience in designing SCADA systems for monitoring and controlling industrial processes.</p>
                 </div>
                 <div class="feature-item animate-on-scroll">
                     <h3>
                         <span class="feature-number">3</span>
-                        Scalable Backend Architecture
+                        Digital Marketing
                     </h3>
-                    <p>Design scalable and efficient backend systems using Express.js and Node.js.</p>
+                    <p>Master digital marketing techniques to help businesses grow their online presence and drive traffic.</p>
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/mobile_dash.jpeg" alt="MERN Stack Dashboard">
+                <img src="/images/mobile_dash.jpeg" alt="Training Overview">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -732,14 +617,14 @@
 <!-- Case Study Section -->
 <section class="success-stories">
     <div class="container">
-        <h2>MERN Stack Success Stories</h2>
+        <h2>Our Training Success Stories</h2>
         <div class="slider-container">
             <div class="slider">
                 <div class="slide active">
                     <div class="slide-content">
                         <div class="slide-text">
                             <h3>AppMaster: 300% User Growth</h3>
-                            <p>Our MERN stack solution helped AppMaster achieve remarkable growth:</p>
+                            <p>Our training programs helped AppMaster achieve remarkable growth:</p>
                             <ul>
                                 <li>✓ 300% increase in active users</li>
                                 <li>✓ 50% improvement in user retention</li>
@@ -755,7 +640,7 @@
                     <div class="slide-content">
                         <div class="slide-text">
                             <h3>WebGenius: Streamlined Development</h3>
-                            <p>Our MERN stack process helped WebGenius launch faster:</p>
+                            <p>Our training helped WebGenius reduce development time significantly:</p>
                             <ul>
                                 <li>✓ 40% reduction in development time</li>
                                 <li>✓ 60% decrease in bug reports</li>
@@ -771,7 +656,7 @@
                     <div class="slide-content">
                         <div class="slide-text">
                             <h3>SwiftApp: Enhanced User Experience</h3>
-                            <p>Our React-based UI/UX redesign transformed SwiftApp's user satisfaction:</p>
+                            <p>SwiftApp's user satisfaction improved dramatically through our UI/UX training:</p>
                             <ul>
                                 <li>✓ 95% user satisfaction rate</li>
                                 <li>✓ 70% increase in daily active users</li>
@@ -787,7 +672,7 @@
                     <div class="slide-content">
                         <div class="slide-text">
                             <h3>TechMobile: Scalability Achievement</h3>
-                            <p>Our Node.js backend helped TechMobile expand rapidly:</p>
+                            <p>Our training helped TechMobile scale their backend infrastructure with Node.js:</p>
                             <ul>
                                 <li>✓ Scaled from 10k to 1M users in 6 months</li>
                                 <li>✓ 99.99% uptime during peak loads</li>
@@ -810,9 +695,9 @@
 <!-- CTA Section -->
 <section class="cta">
     <div class="container">
-        <h2 class="animate-on-scroll">Ready to Build Your Next Great MERN Stack App?</h2>
-        <p class="animate-on-scroll">Let Dash and Dots turn your vision into a powerful, user-friendly web or mobile application. Our team of MERN stack experts is ready to bring your ideas to life.</p>
-        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+        <h2 class="animate-on-scroll">Ready to Master the Latest Technologies?</h2>
+        <p class="animate-on-scroll">Let Dash and Dots guide you through comprehensive training in Mobile App Development, Web Development, and other cutting-edge technologies to boost your career.</p>
+        <a href="#" class="btn btn-secondary animate-on-scroll">Start Your Training Journey</a>
     </div>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
@@ -820,6 +705,7 @@
     <div class="floating floating-5"></div>
     <div class="floating floating-6"></div>
 </section>
+
 
         <!-- End of Training Section -->
 
@@ -859,6 +745,7 @@
 
     <!-- Script Begins -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/pageslider"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
