--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
                             <div class="col-lg-4">
                               <div class="card-team">
                                 <div class="team-img-container">
+                                  <img src="/images/sumit_profile.jpg" />
+                                </div>
+                                <div class="content-team">
+                                  <h6 class="team-member-name">Sumit Kumar Pratihast</h6>
+                                  <a href="">View Profile</a>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-lg-4">
+                              <div class="card-team">
+                                <div class="team-img-container">
                                   <img src="/images/bittu_profile.jpg" />
                                 </div>
                                 <div class="content-team">
@@ -480,7 +491,13 @@
               </ul>
               <ul class="navbar-nav">
                 <li class="nav-item mx-1 position-static">
-                  <a class="nav-link" href="training.html" role="button" aria-label="Contact us">Contact us</a>
+                  <a
+                  class="nav-link"
+                  href="#contact-us"
+                  role="button"
+                  aria-label="Contact us"
+                  >Contact us</a
+                >
                 </li>
               </ul>
             </div>
