--- a/Salons.html
+++ b/Salons.html
@@ -509,7 +509,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
