--- a/training.html
+++ b/training.html
@@ -506,7 +506,7 @@
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
