--- a/ProfileR.html
+++ b/ProfileR.html
@@ -776,7 +776,7 @@ body {
                             </ul>
                             <ul class="navbar-nav">
                                 <li class="nav-item mx-1 position-static">
-                                    <a class="nav-link" href="training.html" role="button"
+                                    <a class="nav-link" href="index.html#contact-us" role="button"
                                         aria-label="Contact us">Contact us</a>
                                 </li>
                             </ul>
@@ -794,9 +794,9 @@ body {
             <section class="hero1">
                 <div class="hero-content">
                     <p class="greeting">HEY THERE!</p>
-                    <h1 class="name">I AM DHEERAJ YADAV</h1>
+                    <h1 class="name">I AM ROHIT KUMAR GUPTA</h1>
                     <div class="social-links">
-                    <p class="title">FULL STACK DEVELOPER</p>
+                    <p class="title">ANDROID/IOS DEVELOPER</p>
                         
                             <a href="#" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
@@ -834,7 +834,7 @@ body {
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="/images/myprofile.jpg">
+                    <img src="/images/rohit_profile.jpg">
                 </div>
             </section>
             </div>
