--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Mihir Kumar Mishra</h6>
-                                  <a href="">View Profile</a>
+                                  <a href="ProfileM.html">View Profile</a>
                                 </div>
                               </div>
                             </div>
@@ -183,7 +183,7 @@
                                 </div>
                                 <div class="content-team">
                                   <h6 class="team-member-name">Dheeraj Yadav</h6>
-                                  <a href="">View Profile</a>
+                                  <a href="profileD.html">View Profile</a>
                                 </div>
                               </div>
                             </div>
