--- a/training.html
+++ b/training.html
@@ -161,7 +161,7 @@
                                 <div class="content-team">
                                   <a class="nav-link"
                                     onclick="navigateToPage('ProfileS.html')">
-                                  <h6 class="team-member-name">Sumit Kumar Pratihast</h6>
+                                  <h6 class="team-member-name">Sumit Ranjan Pratihast</h6>
                                   View Profile</a>
                                 </div>
                               </div>
