--- a/ProfileS.html
+++ b/ProfileS.html
@@ -75,237 +75,7 @@
 
     <!-- Color Panel -->
     <!-- <link href="css/color-panel.css" rel="stylesheet" type="text/css" /> -->
-    <style>
-           @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: #ffffff;
-    color: #333;
-    overflow-x: hidden;
-}
-
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-
-
-/* Hero Section */
-.hero1 {
-    min-height: calc(100vh - 100px);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    position: relative;
-}
-
-.hero1::before {
-    content: '';
-    position: absolute;
-    top: -100px;
-    right: -200px;
-    width: 465px;
-    height: 630px;
-    background: linear-gradient(45deg, #ff005e, #B721FF);
-    border-radius: 50%;
-    z-index: 1;
-}
-
-.hero-content1 {
-    padding: 100px 0;
-    position: relative;
-    z-index: 2;
-}
-
-.greeting {
-    color: #6C63FF;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: -40px;
-    opacity: 0;
-    animation: fadeInUp 0.6s forwards;
-}
-
-.name {
-    font-size: 64px;
-    font-weight: 800;
-    line-height: 1.1;
-    margin-bottom: -40px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.2s forwards;
-}
-
-.title {
-    font-size: 24px;
-    color: #666;
-    margin-bottom: -30px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.4s forwards;
-}
-
-.social-links {
-    display: flex;
-    gap: 20px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.6s forwards;
-}
-
-.social-links a {
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background: #cac7c7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #333;
-    transition: all 0.3s ease;
-}
-
-.social-links a:hover {
-    background: #6C63FF;
-    color: white;
-    transform: translateY(-5px);
-}
-
-.cta-button {
-    display: inline-block;
-    padding: 15px 40px;
-    background: linear-gradient(45deg, #6C63FF, #B721FF);
-    color: white;
-    text-decoration: none;
-    border-radius: 30px;
-    font-weight: 600;
-    transition: transform 0.3s ease;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.8s forwards;
-}
-
-.cta-button:hover {
-    transform: translateY(-5px);
-}
-
-.stats {
-    display: flex;
-    gap: 60px;
-    margin-top:-1.5rem;
-    opacity: 0;
-    animation: fadeInUp 0.6s 1s forwards;
-}
-
-.stat-item {
-    text-align: center;
-}
-
-.stat-number {
-    font-size: 36px;
-    font-weight: 700;
-    color: #6C63FF;
-    margin-bottom: 5px;
-}
-
-.stat-label {
-    color: #666;
-    font-size: 14px;
-}
-
-.hero-image {
-    position: relative;
-    z-index: 2;
-    top: 1rem;
-}
-
-.hero-image img {
-    width: 85%;
-    height: 85%;
-    object-fit: cover;
-    border-radius: 20px;
-    opacity: 0;
-    animation: fadeIn 0.6s 1.2s forwards;
-}
-.certifications h2 {
-            font-size: 24px;
-            color: #2D2D2D;
-            margin-bottom: 15px;
-        }
-
-        .cert-list {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .cert-item {
-            background-color: #f0f0f0;
-            padding: 15px 0px;
-            border-radius: 20px;
-            font-size: 14px;
-            color: #4a4a4a;
-        }
-
-@keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-/* Responsive Design */
-@media (max-width: 1024px) {
-    .hero1 {
-        grid-template-columns: 1fr;
-    }
-
-    .hero1::before {
-        width: 600px;
-        height: 600px;
-        top: -50px;
-        right: -300px;
-    }
-
-    .hero-image {
-        display: none;
-    }
-}
-
-@media (max-width: 768px) {
-   
-
-    .name {
-        font-size: 48px;
-    }
-
-    .stats {
-        gap: 30px;
-    }
-
-    .stat-number {
-        font-size: 28px;
-    }
-}
-    </style>
+  
 
 </head>
 
@@ -383,7 +153,7 @@ body {
                                                 </div>
                                                 <!-- Content Sections (Team, Gallery, etc.) -->
                                                 <div id="team-content" style="display: none">
-                                                <!-- Start of meet our team section -->
+                                              <!-- Start of meet our team section -->
                           <div class="row">
                             <div class="col-lg-4">
                               <div class="card-team">
@@ -820,9 +590,9 @@ body {
             <section class="hero1">
                 <div class="hero-content">
                     <p class="greeting">HEY THERE!</p>
-                    <h1 class="name">I AM SUMIT KUMAR PRATIHAST</h1>
+                    <h1 class="name">SUMIT RANJAN PRATIHAST</h1>
                     <div class="social-links">
-                    <p class="title">FOUNDER & CEO</p>
+                    <p class="title">HUMAN RESOURCES MANAGER</p>
                         
                             <a href="#" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
