--- a/website.html
+++ b/website.html
@@ -168,7 +168,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                                 <div class="content-team">
                                   <a class="nav-link"
                                     onclick="navigateToPage('ProfileS.html')">
-                                  <h6 class="team-member-name">Sumit Kumar Pratihast</h6>
+                                  <h6 class="team-member-name">Sumit Ranjan Pratihast</h6>
                                   View Profile</a>
                                 </div>
                               </div>
