--- a/ProfileR.html
+++ b/ProfileR.html
@@ -594,10 +594,10 @@
                     <div class="social-links">
                     <p class="title">ANDROID/IOS DEVELOPER</p>
                         
-                            <a href="#" aria-label="GitHub">
+                            <a href="https://github.com/rohitkg2001" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/posts/rohit-gupta-b12769207_im-happy-to-share-that-im-starting-a-new-activity-7248354910352629760-VmB9?utm_source=share&utm_medium=member_android" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                            
