--- a/ProfileB.html
+++ b/ProfileB.html
@@ -594,10 +594,10 @@
                     <div class="social-links">
                     <p class="title">HUMAN RESOURCES MANAGER</p>
                         
-                            <a href="#" aria-label="GitHub">
+                            <a href="https://github.com/Bittu75469" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/in/bittu-kumar-pratihast-78b983207?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                            
