--- a/ProfileS.html
+++ b/ProfileS.html
@@ -594,10 +594,10 @@
                     <div class="social-links">
                     <p class="title">FOUNDER & CEO</p>
                         
-                            <a href="#" aria-label="GitHub">
+                            <a href="https://github.com/sumit245" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/in/sumit-r-pratihast?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                            
