--- a/ProfileU.html
+++ b/ProfileU.html
@@ -593,10 +593,10 @@
                     <div class="social-links">
                     <p class="title">FRONTEND DEVELOPER</p>
                         
-                            <a href="#" aria-label="GitHub">
+                            <a href="https://github.com/Ujjaval-Raj" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/in/ujjaval-raj-27192123b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                            
